PR/44147: Henning Petersen: Add missing closedir calls.